css: Fix list spacing
Our html lists have looked bad for a really long time. They use the
theme's default 16px found which is bigger than our paragraph body font
making lists look pretty awkward.

--- a/source/_static/theme_overrides.css
+++ b/source/_static/theme_overrides.css
@@ -95,6 +95,10 @@ p {
     font-size: 14px;
 }
 
+li {
+    font-size: 14px;
+}
+
 html.writer-html5 .rst-content dl.field-list>dt:after {
     content: initial;
 }
